# hypscript

./: CMakeLists.txt  README.md
src/: Config.cpp  Config.hpp  Constants.hpp  main.cpp
src/core/: Containers.hpp  Core.hpp  ID.hpp
src/core/lib/: Variant.hpp
src/script/: Script.cpp  Script.hpp  ScriptApi.hpp  ScriptBindings.cpp
src/script/compiler/ast/: AstSymbolQuery.cpp
src/util/: Defines.hpp
